# jjrf-book-confiabilidad-dados

./: 404.html  AUTHOR.html  BACK_COVER.html  CONCEPTS.html  COVER.html  Cargo.toml  DEDICATION.html  DICTIONARY.html  EPILOGUE.html  FOREWORD.html  LICENSE.md  NEXT.html  OBJECTIVES.html  PREFACE.html  README.md  REFERENCES.html  STRUCTURE.html  SUMMARY.html  TITLE.html  backlog.html  book.backup.toml  book.toml  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: deploy.yml  main.yml  publish-book.yml
Topics/: confiabilidad_de_sistemas.md  topics_backlog.md
ci/: build-mdbook.sh  install-hub.sh  make-release.sh
concepts/: attributes.html  concepts.html  data_management_processes.html  data_quality.html  data_quality_intro.html  data_quality_models.html  data_relibility.html  deficiencies.html  fault_prediction.html  fault_prevention_avoidance.html  fault_prevention_elimination.html  fault_tolerance.html  impediments.html  master_data.html  mechanisms.html  reliability_tools.html  systems_info.html  systems_intro.html  systems_reliability.html
preface/: author.html  objectives.html  preface.html  structure_contents.html
src/: CONCEPTS.md  SUMMARY.md  atributos.md  calidad_de_datos.md  confiabilidad_de_sistemas.md  deficiencias.md  impedimientos.md  mecanismos.md
src/concepts/: attributes.md  mechanisms.md  systems_reliability.md
