[package]
name = "jjrf-book-confiabilidad-dados"
version = "0.1"
authors = [
    "Jeff Roth <jjrothfilho@gmail.com>"
]
documentation = "http://rust-lang.github.io/mdBook/index.html"
edition = "2022"
exclude = []
keywords = ["book", "gitbook", "rustbook", "markdown"]
license = ""
readme = "README.md"
repository = "https://github.com/jeffersonroth/jjrf-book-confiabilidad-dados"
description = "Libro de Ingeniería y confiabilidad de Datos - Jeff Roth"

[dependencies]
mdbook = "1.0.28"

# Watch feature
notify = { version = "4.0", optional = true }
gitignore = { version = "1.0", optional = true }

# Serve feature
futures-util = { version = "0.3.4", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
warp = { version = "0.3.1", default-features = false, features = ["websocket"], optional = true }

# Search feature
elasticlunr-rs = { version = "2.3", optional = true, default-features = false }
ammonia = { version = "3", optional = true }

[dev-dependencies]

[features]
default = ["watch", "serve", "search"]
watch = ["notify", "gitignore"]
serve = ["futures-util", "tokio", "warp"]
search = ["elasticlunr-rs", "ammonia"]

[[bin]]
doc = false
name = "jjrf-book-confiabilidad-dados"